# deeplearn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  debug-build.sh  fetch_mnist.sh
lib/: CMakeLists.txt  Makefile  cmake_install.cmake  deeplearn
lib/common/: Common.h
lib/kernels/: Arithmetic.cl  Convolution.cl  KernelCommon.h  Misc.cl
lib/nn/: Activation.h  Gpu.cpp  Gpu.h  Initializer.cpp  Initializer.h  KernelList.h  Layer.h  NN.h  Network.h  Objective.h  Tensor.h
lib/nn/activations/: Softmax.h
lib/nn/layers/: Bias.h  Convolution.h  Dense.h  Reshape.h
lib/nn/objectives/: CrossEntropy.h  MSE.h
lib/nn/tensor/: BaseTensor.h  CpuTensor.cpp  CpuTensor.h  GpuTensor.h  Shape.h  TensorOps.h
lib/ocl/: Buffer.cpp  Buffer.h  Device.cpp  Device.h  Kernel.cpp  Kernel.h  Utils.cpp
lib/utils/: OpenCL.cpp  OpenCL.h
mnist/: CMakeLists.txt  File.h  Main.cpp  Mnist.cpp  Mnist.h  README  fetch_mnist.sh
src/: CMakeLists.txt  Main.cpp  TestSuite.cpp
src/kernels/: Activations.cl  LinearAlgebra.cl  Pooling.cl
src/nn/: Network.h
src/nn/activations/: ReLU.h  Sigmoid.h
src/nn/layers/: MaxPool.h
src/nn/tensor/: CpuTensor.cpp  CpuTensor.h  CpuTensorOps.cpp  GpuTensor.cpp  GpuTensorOps.cpp  Shape.cpp
src/ocl/: Device.cpp  Kernel.h  Program.cpp  Program.h  Utils.h
src/utils/: Mnist.cpp
test/: CMakeLists.txt  TestSuite.cpp
